--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,43 +10,71 @@ on:
     branches: [ "master" ]
 
 jobs:
+  build-test-check:
+    runs-on: ${{ matrix.config.os }}
+    strategy:
+      # Default is true, cancels jobs for other platforms in the matrix if one fails
+      fail-fast: false
+      matrix:
+        go-version: [ "1.18" ]
 
-  build:
-    runs-on: ubuntu-latest
+        config:
+          - {
+              os: "ubuntu-latest",
+              urlTemplate: "https://github.com/caddyserver/xcaddy/releases/download/{{version}}/xcaddy_{{rawVersion}}_linux_amd64.tar.gz",
+              name: "xcaddy",
+              pathInArchive: "xcaddy"
+              not_engineerd_configurator__caddy_file_name: "caddy"
+            }
+          - {
+              os: "macos-latest",
+              urlTemplate: "https://github.com/caddyserver/xcaddy/releases/download/{{version}}/xcaddy_{{rawVersion}}_mac_amd64.tar.gz",
+              name: "xcaddy",
+              pathInArchive: "xcaddy"
+              not_engineerd_configurator__caddy_file_name: "caddy"
+            }
+          - {
+              os: "windows-latest",
+              urlTemplate: "https://github.com/caddyserver/xcaddy/releases/download/{{version}}/xcaddy_{{rawVersion}}_windows_amd64.zip",
+              name: "xcaddy.exe",
+              pathInArchive: "xcaddy.exe"
+              not_engineerd_configurator__caddy_file_name: "caddy.exe"
+            }
+
     steps:
     - uses: actions/checkout@v3
 
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
-        go-version: 1.18
+        check-latest: true
+        cache: true
+        go-version: ${{ matrix.go-version }}
 
     - name: Set up xcaddy
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y debian-keyring debian-archive-keyring apt-transport-https
-        curl -sSL --fail 'https://dl.cloudsmith.io/public/caddy/xcaddy/gpg.key' | sudo gpg --dearmor -o /usr/share/keyrings/caddy-xcaddy-archive-keyring.gpg
-        curl -sSL --fail 'https://dl.cloudsmith.io/public/caddy/xcaddy/debian.deb.txt' | sudo tee /etc/apt/sources.list.d/caddy-xcaddy.list
-        sudo apt-get update
-        sudo apt-get install -y xcaddy
-
-    - name: Set some variables
-      run: |
-        echo "TEMP_DIR=$(mktemp -d)" >> $GITHUB_ENV
+      uses: engineerd/configurator@v0.0.8
+      with:
+        name: ${{ matrix.config.name }}
+        pathInArchive: ${{ matrix.config.pathInArchive }}
+        fromGitHubReleases: "true"
+        repo: "caddyserver/xcaddy"
+        version: "latest"
+        urlTemplate: ${{ matrix.config.urlTemplate }}
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Build
       run: |
-        xcaddy build master --output "${TEMP_DIR}/caddy-l4" --with github.com/mholt/caddy-l4=./
+        xcaddy build master --output "${{ matrix.config.not_engineerd_configurator__caddy_file_name }}" --with github.com/mholt/caddy-l4=./
         # smoking test
         echo
         echo '########'
         echo '# caddy list-modules'
-        "${TEMP_DIR}/caddy-l4" list-modules
+        "${{ matrix.config.not_engineerd_configurator__caddy_file_name }}" list-modules
         echo '########'
         echo
         echo '########'
         echo '# caddy build-info'
-        "${TEMP_DIR}/caddy-l4" build-info
+        "${{ matrix.config.not_engineerd_configurator__caddy_file_name }}" build-info
         echo '########'
 
     - name: Test
