--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,19 +24,16 @@ jobs:
             urlTemplate: "https://github.com/caddyserver/xcaddy/releases/download/{{version}}/xcaddy_{{rawVersion}}_linux_amd64.tar.gz"
             name: "xcaddy"
             pathInArchive: "xcaddy"
-            not_engineerd_configurator__caddy_file_name: "caddy"
 
           - os: "macos-latest"
             urlTemplate: "https://github.com/caddyserver/xcaddy/releases/download/{{version}}/xcaddy_{{rawVersion}}_mac_amd64.tar.gz"
             name: "xcaddy"
             pathInArchive: "xcaddy"
-            not_engineerd_configurator__caddy_file_name: "caddy"
 
           - os: "windows-latest"
             urlTemplate: "https://github.com/caddyserver/xcaddy/releases/download/{{version}}/xcaddy_{{rawVersion}}_windows_amd64.zip"
             name: "xcaddy.exe"
             pathInArchive: "xcaddy.exe"
-            not_engineerd_configurator__caddy_file_name: "caddy.exe"
 
     steps:
     - uses: actions/checkout@v3
@@ -61,17 +58,17 @@ jobs:
 
     - name: Build
       run: |
-        xcaddy build master --output "${{ matrix.not_engineerd_configurator__caddy_file_name }}" --with github.com/mholt/caddy-l4=./
+        xcaddy build master --output ${{ runner.temp }}/caddy --with github.com/mholt/caddy-l4=./
         # smoking test
         echo
         echo '########'
         echo '# caddy list-modules'
-        "${{ matrix.not_engineerd_configurator__caddy_file_name }}" list-modules
+        ${{ runner.temp }}/caddy list-modules
         echo '########'
         echo
         echo '########'
         echo '# caddy build-info'
-        "${{ matrix.not_engineerd_configurator__caddy_file_name }}" build-info
+        ${{ runner.temp }}/caddy build-info
         echo '########'
 
     - name: Test
