--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,7 +17,6 @@ jobs:
       fail-fast: false
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
-        go-version: [ "1.20" ]
 
         include:
           - os: ubuntu-latest
@@ -43,7 +42,7 @@ jobs:
       with:
         check-latest: true
         cache: true
-        go-version: ${{ matrix.go-version }}
+        go-version-file: ./go.mod
 
     - name: Set up xcaddy
       uses: engineerd/configurator@v0.0.8
