--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,6 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
+        go-version: [ "1.19", "1.20" ]
 
         include:
           - os: ubuntu-latest
@@ -42,7 +43,7 @@ jobs:
       with:
         check-latest: true
         cache: true
-        go-version-file: ./go.mod
+        go-version: ${{ matrix.go-version }}
 
     - name: Set up xcaddy
       uses: engineerd/configurator@v0.0.10
