--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
-        go-version: [ "1.20" ]
+        go-version: [ "1.19", "1.20" ]
 
         include:
           - os: ubuntu-latest
@@ -39,14 +39,14 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Set up Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v4
       with:
         check-latest: true
         cache: true
         go-version: ${{ matrix.go-version }}
 
     - name: Set up xcaddy
-      uses: engineerd/configurator@v0.0.8
+      uses: engineerd/configurator@v0.0.10
       with:
         name: ${{ matrix.name }}
         pathInArchive: ${{ matrix.pathInArchive }}
@@ -81,7 +81,6 @@ jobs:
         # TODO:
         # github.com/mholt/caddy-l4,
         # modules/l4echo,
-        # modules/l4proxy,
         # modules/l4ssh,
         # modules/l4subroute,
         # modules/l4tee,
