--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,7 +17,9 @@ jobs:
       fail-fast: false
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
-        go-version: [ "1.20" ]
+        go-version:
+          - "1.20"
+          - "1.21"
 
         include:
           - os: ubuntu-latest
